--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -50,8 +50,8 @@ contact_links:
     #icon_pack: fab
     #name: Chat on Keybase
     #link: 'https://keybase.io/'
-  - icon: linkedin
-    icon_pack: fas
+  - icon: fa-linkedin
+    icon_pack: fab
     name: Network
     link: 'https://www.linkedin.com/in/jammieca-godfrey-20798940/'
 
