--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,7 +10,7 @@ main:
   - name: Skills
     url: '#skills'
     weight: 20
-  - name: CV
+  # name: CV
     url: '#CV'
     weight: 30
   - name: Projects
@@ -27,4 +27,4 @@ main:
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
     url: uploads/JPGodfrey ResumeR.pdf
-    weight: 70
+    weight: 30
