--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,18 @@ main:
   - name: Skills
     url: '#skills'
     weight: 30
+  - name: Experience
+    url: '#experience'
+    weight: 40
   - name: Projects
     url: '#projects'
-    weight: 40
+    weight: 50
   - name: Research
     url: '#research'
-    weight: 50
+    weight: 60
   - name: Contact
     url: '#contact'
-    weight: 60
+    weight: 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
