--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,8 +11,8 @@ main:
     url: '#skills'
     weight: 30
   #- name: Experiences
-    #url: '#experience'
-    #weight: 40
+    url: '#experience'
+    weight: 40
   - name: Projects
     url: '#projects'
     weight: 40
@@ -22,7 +22,6 @@ main:
   - name: Contact
     url: '#contact'
     weight: 60
-
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
