--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,6 +10,15 @@ main:
   - name: Skills
     url: '#skills'
     weight: 30
+  - name: Projects
+    url: '#projects'
+    weight: 40
+  - name: Research
+    url: '#research'
+    weight: 50
+  - name: Contact
+    url: '#contact'
+    weight: 60
 
     
 # Link to a PDF of your resume/CV from the menu.
